# gtd-app

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: config.h  database.cpp  database.h  database_registry.cpp  database_registry.h  lookup_maps.cpp  lookup_maps.h  task.h
src/platform/windows/: gui_win32.cpp  gui_win32.h
src/ui/: canvas_view.cpp  canvas_view.h  card_view.cpp  card_view.h  lookup_maps.cpp  lookup_maps.h  task_filter_criteria.h
